src/components/timeline.less
@import (reference) './library';
@import './layer';

@timeline-playhead-handle-size: 18px;
@timeline-playhead-arrow-size: @timeline-playhead-handle-size / 2;

.pl-timeline {
  display: flex;
  flex-direction: column;
  flex-shrink: 0;
  margin-top: @padding-smallest;
  border-top: 1px solid @gray;
  background-color: @gray-dark;
  position: relative;
  .pl-timeline-header {
    display: flex;
    flex-shrink: 0;
    border-bottom: 1px solid black;
    .pl-timeline-header-control {
      display: flex;
      flex-shrink: 0;
      width: @library-width;
      padding: @padding-smaller;
      border-right: 1px solid @shadow-dark;
      font-family: @font-family-monospace;
      .pl-timeline-header-control-indicator {
        display: flex;
        align-items: center;
        justify-content: space-between;
        flex-grow: 1;
        margin-right: @padding-smaller;
        padding: 0 @padding-small;
        border-radius: @border-radius-small;
        box-shadow: inset 0 1px @highlight-dark, inset 0 -1px @shadow, 0 0 0 1px @shadow-dark;
        font-family: @font-family-monospace;
        line-height: @padding-larger;
        background: linear-gradient(lighten(@brand-warning, 10%) 50%, @brand-warning 50%, darken(@brand-warning, 10%));
        overflow: hidden;
        position: relative;
        span {
        }
        .pl-timeline-header-control-indicator-snap {
          cursor: pointer;
          .pl-icon {
            width: @padding-base;
            height: @padding-base;
          }
        }
      }
      .pl-timeline-header-control-add {
        flex-shrink: 0;
        position: relative;
        .pl-icon {
          width: @padding-large;
          height: @padding-large;
          position: absolute;
          top: 50%;
          left: 50%;
          transform: translate(-50%, -50%);
        }
      }
    }
    .pl-timeline-header-track {
      flex-grow: 1;
      margin: 0 @padding-small;
      cursor: pointer;
      position: relative;
      &:before {
        content: '';
        height: 50%;
        border-top: 1px solid @shadow-dark;
        background-color: @gray;
        position: absolute;
        bottom: 0;
        left: @padding-small * -1;
        right: @padding-small * -1;
      }

      .pl-timeline-header-track-ticks {
        display: flex;
        justify-content: space-between;
        align-items: baseline;
        width: 100%;
        height: 25%;
        position: absolute;
        bottom: 50%;
        left: 0;
        .pl-timeline-header-track-tick {
          width: 1px;
          height: 100%;
          background-color: @gray-lightest;
          &:last-child {
            margin-right: -1px;
          }
          &:nth-child(2n) {
            height: 25%;
          }
          &:nth-child(4n - 1) {
            height: 50%;
          }
          &:nth-child(8n - 3) {
            height: 75%;
          }
        }
      }
      .pl-timeline-header-track-playhead {
        width: @timeline-playhead-handle-size + 1;
        height: 50%;
        cursor: ew-resize;
        background-color: @brand-warning;
        position: absolute;
        top: 0;
        left: 0;
        transform: translateX(@timeline-playhead-handle-size / -2);
        &:before {
          content: '';
          width: @timeline-playhead-handle-size + 1;
          border-top: @timeline-playhead-arrow-size solid @brand-warning;
          border-left: @timeline-playhead-arrow-size solid transparent;
          border-right: @timeline-playhead-arrow-size solid transparent;
          top: 100%;
          position: absolute;
        }
      }
    }
  }
  .pl-timeline-content {
    display: flex;
    flex-grow: 1;
    background-color: @gray-darker;
    position: relative;
    z-index: 0;
  }
  .pl-timeline-layers {
    flex-grow: 1;
    overflow: auto;
  }
  .pl-timeline-track {
    position: absolute;
    top: 0;
    left: @library-width + @padding-small;
    right: @padding-small;
    bottom: 0;
    &:before {
      content: '';
      width: 1px;
      height: 100%;
      margin-left: -1px;
      background-color: @shadow-dark;
      position: absolute;
      top: 0;
      left: @padding-small * -1;
    }

    .pl-timeline-marker {
      z-index: 1;
    }
  }
  .pl-timeline-marker, .pl-timeline-handle {
    position: absolute;
    top: 0;
    left: 0;
  }
  .pl-timeline-marker {
    width: 1px;
    height: 100%;
    background-color: @brand-warning;
    pointer-events: none;
  }
  .pl-timeline-handle {
    width: 100%;
    height: @padding-small;
    cursor: row-resize;
    transform: translateY(-50%);
  }
}

